--- a/.github/workflows/pull-request-demo.yaml
+++ b/.github/workflows/pull-request-demo.yaml
@@ -17,5 +17,5 @@ jobs:
           
       - uses: actions/upload-artifact@v4
         with:
-          name: pr
+          name: 'pr-${{github.run_id}}'
           path: pr/
